[package]
name = "blockifier_dynamodb_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
blockifier = { git = "https://github.com/starkware-libs/sequencer", rev = "e8dd07f9f1b43102b5b2ffda670c7c54993d2a17", features = ["testing"] }
blockifier_test_utils = { git = "https://github.com/starkware-libs/sequencer", rev = "e8dd07f9f1b43102b5b2ffda670c7c54993d2a17" }
starknet_api = { git = "https://github.com/starkware-libs/sequencer", rev = "e8dd07f9f1b43102b5b2ffda670c7c54993d2a17", features = ["testing"] }
starknet-types-core = "0.1.6"
aws-config = "1.1.7"
aws-sdk-dynamodb = "1.17.0"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
async-trait = "0.1.77"
bincode = "1.3.3"
cairo-lang-starknet-classes = "=2.10.0"
rand = "0.9"
strum = "0.25.0"
strum_macros = "0.25.2"
indexmap = "2.1.0"
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11"
